stupid.css
/* ... */
@media (min-width:600px) and (max-width:799px) {
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .threequarters.compressible {width:75%; margin-right:-15px}
  .quarter:not(.compressible), .half:not(.compressible), .threequarters:not(.compressible) {width:100%; margin-right:-20px}
  .third {width:33.33%; margin-right:-6.66px}
  .twothirds {width:66.66%; margin-right:-13.33px}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, label.threequarters:not(.compressible).right   {float:left; text-align:left}
}
@media (max-width:599px) {  
  .quarter:not(.compressible), .half:not(.compressible), .third:not(.compressible), .twothirds:not(.compressible), .threequarters:not(.compressible) {width:100%;}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, label.threequarters:not(.compressible).right,
  label.third:not(.compressible).right, label.twothirds:not(.compressible).right   {float:left; text-align:left}
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .third.compressible {width:33.33%; margin-right:-6.66px}
  .twothirds.compressible {width:66.66%; margin-right:-13.33px}
  .threequarters.compressible {width:75%; margin-right:-15px}
}

/*** progress bar from http://codepen.io/holdencreative/details/pvxGxy  ***/
.progress {
  margin-left:-15px;
  margin-right:-15px;
  position:relative;
  height:8px;
  display:block;
  width:120%;
  background-color:#acece6;
  border-radius:0 !important;
  background-clip:padding-box;
  overflow:hidden;
}
.progress .determinate {
  position:absolute;
  background-color:inherit;
  top:0;
  bottom:0;
  background-color:#26a69a;
  transition:width .3s linear;
}
.progress .indeterminate {
  background-color:#26a69a;
}
.progress .indeterminate:before {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}
.progress .indeterminate:after {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
  animation-delay:1.15s;
}
@-webkit-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-moz-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-webkit-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@-moz-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}

/**** dropdown menu from http://codepen.io/philhoyt/pen/ujHzd ***/
ul.menu {list-style:none; position:relative; margin:0; padding:0}
ul.menu.right {float:right}
ul.menu a {display:block; padding:0 15px; text-decoration:none;text-align:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; text-align:left}
ul.menu li {position:relative; float:left; margin:0; padding:0}
ul.menu ul {background:white; border:1px solid #e1e1e1; visibility:hidden; opacity:0;  position:absolute; top:110%; padding:0; z-index:1000; transition:all 0.2s ease-out; list-style-type:none; box-shadow:0.3em 0.3em 1em #666}
ul.menu ul a {padding:10px 15px; color:#333; font-weight:700; font-size:12px; line-height:16px}
ul.menu ul li {float:none; width:200px}
ul.menu ul ul {top:0; left:80%; z-index:2000}
ul.menu li:hover > ul {visibility:visible; opacity:1}
ul.menu>li>ul>li:first-child:before{content:''; position:absolute; width:1px; height:1px; border:10px solid transparent; left:50px; top:-20px; margin-left:-10px; border-bottom-color:white}
ul.menu.dark ul {background:black; border:1px solid black}
ul.menu.dark ul a {color:white}
ul.menu.dark>li>ul>li:first-child:before{border-bottom-color:black}

@media (max-width:599px) {
  header ul.menu li {min-width:90vw}
  header ul.menu.right {float:left; text-align:left}
  header ul.menu ul ul {top:2.5em; left:-1px; z-index:2000}
}

/*** pulsating ring from https://jsfiddle.net/mandynicole/7xrKP/ *******/
.pulse:after {
    content:"";
    border:3px solid #00e6ac;
    -webkit-border-radius:30px;
    height:40px;
    width:40px;
    position:absolute;
    margin-left:-20px;
    margin-top:-20px;
    -webkit-animation:pulsate 1s ease-out;
    -webkit-animation-iteration-count:infinite;
    opacity:0.0
}
@-webkit-keyframes pulsate {
    0% {-webkit-transform:scale(0.1, 0.1); opacity:0.0}
    50% {opacity:1.0}
    100% {-webkit-transform:scale(1.2, 1.2); opacity:0.0}
}

/**** underline effect ***/
a:not(.btn):not(.noeffect) {position:relative}
a:not(.btn):not(.noeffect):hover {color:#26a69a}
a:not(.btn):not(.noeffect):hover:after {width:100%}
a:not(.btn):not(.noeffect):after {
  display:block;
  position:absolute;
  left:0;
  bottom:-1px;
  width:0;
  height:2px;
  background-color:#26a69a;
  content:"";
  transition:width 0.2s;
}

/**** modal ***/
.modal {
  position:fixed;
  z-index:9999;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background-color:rgba(0,0,0,0.8);
  padding-top:20vh;
  transition:opacity 500ms;
  visibility:hidden;
  opacity:0;
}
.modal:target {visibility:visible; opacity:1}
.modal div {margin-left:auto; margin-right:auto}
.modal .close:not(.btn) {position:absolute; top:10px; right:10px; font-size:20px}
.modal .close {transition:all 200ms}

/*** tooltips from http://codepen.io/trezy/pen/Khnzy ***/
[data-tooltip] {position:relative}
/* ... */

